# lesty

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake  compiler.cmake  conan.cmake
lesty/: CMakeLists.txt
lesty-cli/: CMakeLists.txt  main.cpp
lesty-intereactive/: CMakeLists.txt  main.cpp
lesty/include/: aabb.hpp  axis_aligned_rect.hpp  bounding_volume_hierarchy.hpp  camera.hpp  color.hpp  hitable.hpp  image.hpp  material.hpp  pathtracer.hpp  ray.hpp  renderer.hpp  scene.hpp  scene_parser.hpp  sphere.hpp  tile.hpp  triangle.hpp
lesty/src/: aabb.cpp  axis_aligned_rect.cpp  bounding_volume_hierarchy.cpp  dummy.cpp  image.cpp  material.cpp  pathtracer.cpp  renderer.cpp  scene.cpp  scene_parser.cpp  sphere.cpp  triangle.cpp  triangle.hpp
lesty/src/hitables/: axis_aligned_rect.cpp  axis_aligned_rect.hpp  sphere.cpp  sphere.hpp  triangle.cpp
lesty/src/renderers/: path_tracing_renderer.cpp  path_tracing_renderer.hpp
lesty/test/: CMakeLists.txt  aabb_test.cpp  color_test.cpp  image_test.cpp  ray_test.cpp  scene_test.cpp  sphere_test.cpp  triangle_test.cpp
scenes/: cornell.json
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
